Fix for issue 10595: findbugs issues
svn path=/trunk/; revision=33711


Former-commit-id: af79f69be5795c440792bed30cc63e5defc96cc4